@@ -1,5 +1,7 @@
 r125:
 Changed : endian and alignment code
+Changed : directory structure : new "lib" directory
+Updated : lz4io, now uses lz4frame
 Fixed : some alignment warnings under clang
 
 r124:
